<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">U3_STUDENT_Rafael</string>
    <string name="action_settings">Settings</string>
    <string name="text_clear">"Clear "</string>
    <string name="text_button">Add / Clear</string>
    <string name="text_label">"Here is where you will see the text that you type: "</string>
    <string name="text_hint">Type some text and press the button</string>
    <string name="text_red">Red</string>
    <string name="text_blue">Blue</string>
    <string name="text_start">START</string>
    <string name="text_stop">STOP</string>
    <string name="text_image_none">no image</string>
    <string name="text_image_aCoruna">Hercules Tower - A Coruña</string>
    <string name="text_image_lugo">Roman Wall - Lugo</string>
    <string name="text_image_orense">Ourense Cathedral - Ourense</string>
    <string name="text_image_pontevedra">Chapel of the Virgin Pilgrim -  A Coruña</string>
    <string name="img_description_aCoruna">Picture of Hercules Tower</string>
    <string name="img_description_lugo">Picture of Lugo Roman Wall</string>
    <string name="img_description_orense">Picture of Cathedral of Ourense</string>
    <string name="img_description_pontevedra">Picture of Chapel of the Virgin Pilgrim</string>
    <string name="text_toast_gal">You have selected a Galician province</string>
    <string name="text_toast_no_gal">You have not selected a Galician Province</string>
    <string name="province">Province</string>
    <string name="chronoText" translatable="false">00:00</string>
</resources>