<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="16dp">

    <EditText
        android:id="@+id/editText_inputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:hint="@string/text_hint"
        android:inputType="textShortMessage"
        android:minHeight="48dp"
        android:singleLine="true"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <CheckBox
        android:id="@+id/checkBox_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/text_clear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_inputText" />

    <Button
        android:id="@+id/button_addClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/text_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_clear" />

    <TextView
        android:id="@+id/textView_showText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_label"
        android:textColor="@color/red"
        app:layout_constraintTop_toBottomOf="@+id/button_addClear"
        tools:layout_editor_absoluteX="16dp" />

    <RadioButton
        android:id="@+id/radioButton_red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_showText" />

    <RadioButton
        android:id="@+id/radioButton_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_blue"
        app:layout_constraintEnd_toEndOf="@+id/button_addClear"
        app:layout_constraintTop_toBottomOf="@+id/textView_showText" />

    <View
        android:id="@+id/view_HorSeparator"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/radioButton_blue" />

    <Spinner
        android:id="@+id/spinner_provincesList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/province"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_HorSeparator" />

</androidx.constraintlayout.widget.ConstraintLayout>